fix: Update dependencies to ensure compatibility with sqlalchemy-fields

--- a/features/tetroweb-shared-kernel-infra-database-sqla/pyproject.toml
+++ b/features/tetroweb-shared-kernel-infra-database-sqla/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "asyncpg>=0.30.0",
     "sqlalchemy>=2.0.41",
+    "sqlalchemy-fields>=0.5.0",
 ]
 
 
